[gd_scene load_steps=19 format=3 uid="uid://j1uj0knc7fm7"]

[ext_resource type="Script" path="res://Scripts/AchievementsPaginated.gd" id="1_qh08d"]
[ext_resource type="Texture2D" uid="uid://bwxegivs3x3ps" path="res://Assets/Sprout Lands - UI Pack - Premium pack/UI Sprites/Custom/AchievementsWPages.png" id="2_gmjpb"]
[ext_resource type="PackedScene" uid="uid://d0cvrgahjpbks" path="res://Scenes/Button.tscn" id="3_0db0d"]
[ext_resource type="FontVariation" uid="uid://0idecfjj3a8h" path="res://Assets/Fonts/munro/munro_Variation.tres" id="3_8y53o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ai04t"]
atlas = ExtResource("2_gmjpb")
region = Rect2(250, 0, 250, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_0j06x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai04t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_c3qoa"]
atlas = ExtResource("2_gmjpb")
region = Rect2(0, 240, 250, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ucxt"]
atlas = ExtResource("2_gmjpb")
region = Rect2(250, 240, 250, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_y0onf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3qoa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ucxt")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2m3hd"]
atlas = ExtResource("2_gmjpb")
region = Rect2(250, 360, 250, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnpik"]
atlas = ExtResource("2_gmjpb")
region = Rect2(500, 360, 250, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_aa53y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m3hd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnpik")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8t5yl"]
atlas = ExtResource("2_gmjpb")
region = Rect2(0, 480, 250, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_htxf8"]
atlas = ExtResource("2_gmjpb")
region = Rect2(250, 480, 250, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_qcl73"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t5yl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htxf8")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_xlpty"]
atlas = ExtResource("2_gmjpb")
region = Rect2(500, 240, 250, 120)

[sub_resource type="AtlasTexture" id="AtlasTexture_psd5m"]
atlas = ExtResource("2_gmjpb")
region = Rect2(0, 360, 250, 120)

[sub_resource type="SpriteFrames" id="SpriteFrames_jpbuk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlpty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_psd5m")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="AchievementsPaginated" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 35.0
offset_top = 5.0
offset_right = 285.0
offset_bottom = 125.0
script = ExtResource("1_qh08d")

[node name="AchievementPanel" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_0j06x")
centered = false

[node name="PageLeftButton" parent="." instance=ExtResource("3_0db0d")]
spriteImages = SubResource("SpriteFrames_y0onf")
buttonAreaWidth = 20
buttonAreaHeight = 22

[node name="PageFirstButton" parent="." instance=ExtResource("3_0db0d")]
offset_left = 155.0
offset_right = 175.0
spriteImages = SubResource("SpriteFrames_aa53y")
buttonAreaWidth = 20
buttonAreaHeight = 22

[node name="PageNumber" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 98.0
offset_right = 283.0
offset_bottom = 154.0
scale = Vector2(0.25, 0.25)
theme_override_colors/default_color = Color(0.664063, 0.472656, 0.347656, 1)
theme_override_fonts/normal_font = ExtResource("3_8y53o")
theme_override_fonts/bold_font = ExtResource("3_8y53o")
theme_override_font_sizes/normal_font_size = 41
theme_override_font_sizes/bold_font_size = 41
text = "20/20"

[node name="PageLastButton" parent="." instance=ExtResource("3_0db0d")]
offset_left = 203.0
offset_right = 223.0
spriteImages = SubResource("SpriteFrames_qcl73")
buttonAreaWidth = 20
buttonAreaHeight = 22

[node name="PageRightButton" parent="." instance=ExtResource("3_0db0d")]
offset_left = 225.0
offset_right = 245.0
spriteImages = SubResource("SpriteFrames_jpbuk")
buttonAreaWidth = 20
buttonAreaHeight = 22

[connection signal="pressed" from="PageLeftButton" to="." method="_on_page_left_button_pressed"]
[connection signal="pressed" from="PageFirstButton" to="." method="_on_page_first_button_pressed"]
[connection signal="pressed" from="PageLastButton" to="." method="_on_page_last_button_pressed"]
[connection signal="pressed" from="PageRightButton" to="." method="_on_page_right_button_pressed"]
